--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>わくわく算数 アプリインデックス</title>
+    <title>わくわく算数 アプリ</title>
     <style>
         body {
             font-family: 'HiraMaruProN-W4', 'ヒラギノ丸ゴ ProN W4', 'メイリオ', Meiryo, sans-serif;
@@ -191,7 +191,7 @@
     </style>
 </head>
 <body>
-    <h1>わくわく算数 アプリインデックス</h1>
+    <h1>わくわく算数 アプリ</h1>
 
     <div id="grade-tabs">
         </div>
