--- a/2nen/10-11_kakezan/22kuku_2345dan_random.html
+++ b/2nen/10-11_kakezan/22kuku_2345dan_random.html
@@ -245,7 +245,7 @@
 
   <script>
     // ★ここを変更！JSONで定義するIDに合わせる（末尾にアンダースコア'_'）
-    const APP_NS = "kuku-2345dan-random_"; 
+    const APP_NS = "kuku-2345dan-random"; 
     
     const KEY_HS             = APP_NS + "highScore"; 
     const KEY_HISTORY        = APP_NS + "history"; 
