--- a/2nen/10-11_kakezan/23kuku_16789dan_random.html
+++ b/2nen/10-11_kakezan/23kuku_16789dan_random.html
@@ -245,7 +245,7 @@
 
   <script>
     // ★ここを変更！JSONで定義するIDに合わせる（末尾にアンダースコア'_'）
-    const APP_NS = "kuku-16789dan-random_"; 
+    const APP_NS = "23kuku_16789dan_random_"; 
     
     const KEY_HS             = APP_NS + "highScore"; 
     const KEY_HISTORY        = APP_NS + "history"; 
