--- a/2nen/10-11_kakezan/13kuku_3dan_barabara.html
+++ b/2nen/10-11_kakezan/13kuku_3dan_barabara.html
@@ -203,7 +203,7 @@
   </style>
 </head>
 <body>
-  <h1>けいさんドリル</h1>
+  <h1>10　かけ算(1)</h1>
   <h2>三の段の九九（ばらばら）</h2>
 
   <div id="start-area" style="text-align:center; margin:40px 0;">
