--- a/2nen/10-11_kakezan/08kuku_8dan_junban.html
+++ b/2nen/10-11_kakezan/08kuku_8dan_junban.html
@@ -203,7 +203,7 @@
   </style>
 </head>
 <body>
-  <h1>けいさんドリル</h1>
+  <h1>10　かけ算(2)</h1>
   <h2>八の段の九九（じゅんばん）</h2>
 
   <div id="start-area" style="text-align:center; margin:40px 0;">
