--- a/2nen/10-11_kakezan/22kuku_2345dan_random.html
+++ b/2nen/10-11_kakezan/22kuku_2345dan_random.html
@@ -203,7 +203,7 @@
   </style>
 </head>
 <body>
-  <h1>けいさんドリル</h1>
+  <h1>10　かけ算(1)</h1>
   <h2>二～五の段の九九</h2>
 
   <div id="start-area" style="text-align:center; margin:40px 0;">
