--- a/2nen/10-11_kakezan/23kuku_16789dan_random.html
+++ b/2nen/10-11_kakezan/23kuku_16789dan_random.html
@@ -203,7 +203,7 @@
   </style>
 </head>
 <body>
-  <h1>けいさんドリル</h1>
+  <h1>10　かけ算(2)</h1>
   <h2>一、六、七、八、九の段の九九</h2>
 
   <div id="start-area" style="text-align:center; margin:40px 0;">
