--- a/3nen/2_warizan/04_warizan_matome.html
+++ b/3nen/2_warizan/04_warizan_matome.html
@@ -238,7 +238,7 @@
   </div>
 
   <script>
-    const APP_NS = "warizan-matome-challenge_"; 
+    const APP_NS = "warizan-matome_"; 
     
     const KEY_HS             = APP_NS + "highScore"; 
     const KEY_HISTORY        = APP_NS + "history"; 
