--- a/3nen/3_tasizan_hikizan_hissan/01_kuriagari_10i.html
+++ b/3nen/3_tasizan_hikizan_hissan/01_kuriagari_10i.html
@@ -2,23 +2,23 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>たし算の筆算ドリル（繰り上がり2回など）</title>
+  <title>十の位のくり上がり</title>
   <style>
     :root { --cell-size: 70px; }
     html { scroll-behavior: smooth; }
-    body { font-family: 'HiraMaruProN-W4', 'ヒラギノ丸ゴ ProN W4', 'メイリオ', Meiryo, sans-serif; background: #f7f2e0; margin: 20px; color: #333; font-size: 1.8rem; line-height: 1.6; }
-    h1, h2 { text-align: center; margin: 15px 0; color: #8d6e63; text-shadow: 2px 2px 3px rgba(0,0,0,0.1); white-space: nowrap; }
+    body { font-family: 'HiraMaruProN-W4', 'ヒラギノ丸ゴ ProN W4', 'メイリオ', Meiryo, sans-serif; background: #e3f2fd; margin: 20px; color: #333; font-size: 1.8rem; line-height: 1.6; }
+    h1, h2 { text-align: center; margin: 15px 0; color: #1e88e5; text-shadow: 2px 2px 3px rgba(0,0,0,0.1); white-space: nowrap; }
     h1 { font-size: 3.5rem; }
     h2 { font-size: 2.5rem; margin-bottom: 30px; }
-    #problems-wrapper { max-width: 550px; margin: 0 auto 30px; padding: 20px; border: 4px dashed #a1887f; background: #ffffff; box-shadow: 5px 5px 10px rgba(0,0,0,.15); border-radius: 20px; }
+    #problems-wrapper { max-width: 550px; margin: 0 auto 30px; padding: 20px; border: 4px dashed #90caf9; background: #ffffff; box-shadow: 5px 5px 10px rgba(0,0,0,.15); border-radius: 20px; }
     .hissan-table { border-collapse: collapse; margin: 40px auto; font-family: "Kyokasho", "教科書体", serif; direction: rtl; }
     .hissan-table td { width: var(--cell-size); height: var(--cell-size); text-align: center; vertical-align: middle; font-size: 3rem; padding: 0; border: none; direction: ltr; }
-    .problem-number-cell { font-size: 2.5rem; color: #4e342e; font-weight: bold; font-family: sans-serif; width: auto; padding-right: 15px; }
+    .problem-number-cell { font-size: 2.5rem; color: #0d47a1; font-weight: bold; font-family: sans-serif; width: auto; padding-right: 15px; }
     .carry-row td { height: calc(var(--cell-size) * 0.7); }
     .answer-row td:not(.problem-number-cell) { border-top: 3px solid #333; }
     .sign-col { width: calc(var(--cell-size) * 0.6); }
     input { width: 100%; height: 100%; border: 1px solid #ccc; border-radius: 8px; background: transparent; text-align: center; box-sizing: border-box; font-family: inherit; }
-    .answer-input { border: 2px solid #bcaaa4; font-size: 3rem; }
+    .answer-input { border: 2px solid #64b5f6; font-size: 3rem; }
     .carry-input { font-size: 2rem; color: #d32f2f; border: 1px solid #ddd; }
     .correct-field { background-color: #e8fde3 !important; border-color: #a5d6a7 !important; }
     .incorrect-field { background-color: #ffdddd !important; }
@@ -27,9 +27,9 @@
     input[type=number] { -moz-appearance: textfield; }
     .button-area, #result-area { text-align: center; }
     .button-area { margin-bottom: 30px; }
-    button { font-size: 2.5rem; margin: 0 15px; padding: 15px 30px; background: #795548; color: white; border: none; border-radius: 15px; cursor: pointer; }
+    button { font-size: 2.5rem; margin: 0 15px; padding: 15px 30px; background: #42a5f5; color: white; border: none; border-radius: 15px; cursor: pointer; }
     button:disabled { background: #ccc; cursor: default; }
-    #result-area { margin-bottom: 25px; background: #f5f5f5; padding: 20px; border-radius: 15px; border: 2px solid #e0e0e0; }
+    #result-area { margin-bottom: 25px; background: #e3f2fd; padding: 20px; border-radius: 15px; border: 2px solid #90caf9; }
     #result { font-size: 2.8rem; font-weight: bold; margin: 15px 0; min-height: 3rem; }
     #highScoreArea, #clearCountArea, #monthlyCountArea, #dailyCountArea, #overallStatusArea { font-size: 2.2rem; margin: 8px 0; }
     #highScoreValue, #clearCountValue, #monthlyCountValue, #dailyCountValue, #overallStars { font-weight: bold; margin: 0 12px; color: #2e7d32; }
@@ -40,7 +40,7 @@
 </head>
 <body>
   <h1>３　たし算とひき算の筆算</h1>
-  <h2>たし算の筆算（繰り上がり2回など）</h2>
+  <h2>十の位のくり上がり</h2>
 
   <div id="start-area" style="text-align:center; margin:40px 0;"><button id="start-btn">スタート！</button></div>
   <div id="problems-section" style="display:none;">
@@ -61,9 +61,9 @@
   </div>
 
   <script>
-    const APP_NS = "hissan-tashizan-2kai-final-v3_";
+    const APP_NS = "kuriagari-10i_";
     const NUM_QUESTIONS = 5;
-    const TIME_LIMIT = NUM_QUESTIONS * 25;
+    const TIME_LIMIT = NUM_QUESTIONS * 20;
     const startArea = document.getElementById('start-area'), problemsSection = document.getElementById('problems-section'), resultArea = document.getElementById('result-area'),
           checkBtn = document.getElementById('check-answers'), resetHighScoreBtn = document.getElementById('reset-highscore');
     let retryBtn;
@@ -111,16 +111,14 @@
         document.getElementById('overallStars').innerHTML = overallStatusStars;
         document.getElementById('history-list').innerHTML = (JSON.parse(ls.getItem(KEY_HISTORY) || '[]')).map(item => `<li>${item.datetime}：${item.score}てん</li>`).join('');
     }
-
     function generateProblems() {
-        const consecutiveCarryProblems = [];
-        const tensCarryOnlyProblems = [];
-        const usedPairs = new Set();
-        while (consecutiveCarryProblems.length < 15 || tensCarryOnlyProblems.length < 10) {
+        problems = []; let usedPairs = new Set();
+        while (problems.length < NUM_QUESTIONS) {
             const a = Math.floor(Math.random() * 900) + 100;
             const rand = Math.random();
             let b;
-            if (rand < 0.3) b = Math.floor(Math.random() * 90) + 10;
+            if (rand < 0.2) b = Math.floor(Math.random() * 9) + 1;
+            else if (rand < 0.6) b = Math.floor(Math.random() * 90) + 10;
             else b = Math.floor(Math.random() * 900) + 100;
             if (a + b >= 1000) continue;
             const pairKey = `${a}-${b}`;
@@ -129,30 +127,16 @@
             const [bh, bt, bo] = toDigits(b, 3);
             const carry_t = (ao + bo >= 10) ? 1 : 0;
             const carry_h = (at + bt + carry_t >= 10) ? 1 : 0;
-            const sum = a + b;
-            const [ansh, anst, anso] = toDigits(sum, 3);
-            const problemData = {
-                numA: { h: ah, t: at, o: ao }, numB: { h: bh, t: bt, o: bo },
-                carry: { h: carry_h, t: carry_t }, answer: { h: ansh, t: anst, o: anso }
-            };
-            if (carry_t === 1 && carry_h === 1) {
-                consecutiveCarryProblems.push(problemData); usedPairs.add(pairKey);
-            } else if (carry_t === 0 && carry_h === 1) {
-                tensCarryOnlyProblems.push(problemData); usedPairs.add(pairKey);
+            if (carry_h === 0) { // ★条件: 百の位への繰り上がりがない
+                const sum = a + b;
+                const [ansh, anst, anso] = toDigits(sum, 3);
+                problems.push({
+                    numA: { h: ah, t: at, o: ao }, numB: { h: bh, t: bt, o: bo },
+                    carry: { h: carry_h, t: carry_t }, answer: { h: ansh, t: anst, o: anso },
+                    navState: {}
+                });
+                usedPairs.add(pairKey);
             }
-        }
-        problems = [];
-        shuffleArray(consecutiveCarryProblems);
-        shuffleArray(tensCarryOnlyProblems);
-        problems.push(...consecutiveCarryProblems.slice(0, 4));
-        problems.push(...tensCarryOnlyProblems.slice(0, 1));
-        shuffleArray(problems);
-    }
-
-    function shuffleArray(array) {
-        for (let i = array.length - 1; i > 0; i--) {
-            const j = Math.floor(Math.random() * (i + 1));
-            [array[i], array[j]] = [array[j], array[i]];
         }
     }
 
@@ -169,21 +153,29 @@
                     <td></td>
                     <td><input type="number" class="carry-input" id="carry-t-${i}" maxlength="1" ${p.carry.t === 0 ? 'style="visibility:hidden"' : ''}></td>
                     <td><input type="number" class="carry-input" id="carry-h-${i}" maxlength="1" ${p.carry.h === 0 ? 'style="visibility:hidden"' : ''}></td>
-                    <td class="sign-col"></td><td class="problem-number-cell"></td>
+                    <td class="sign-col"></td>
+                    <td class="problem-number-cell"></td>
                 </tr>
                 <tr>
-                    <td>${p.numA.o}</td><td>${p.numA.t}</td><td>${p.numA.h}</td>
-                    <td class="sign-col"></td><td class="problem-number-cell">${i + 1}.</td>
+                    <td>${p.numA.o}</td>
+                    <td>${p.numA.t}</td>
+                    <td>${p.numA.h}</td>
+                    <td class="sign-col"></td>
+                    <td class="problem-number-cell">${i + 1}.</td>
                 </tr>
                 <tr>
-                    <td>${p.numB.o}</td><td>${numB_t_display}</td><td>${numB_h_display}</td>
-                    <td class="sign-col">+</td><td class="problem-number-cell"></td>
+                    <td>${p.numB.o}</td>
+                    <td>${numB_t_display}</td>
+                    <td>${numB_h_display}</td>
+                    <td class="sign-col">+</td>
+                    <td class="problem-number-cell"></td>
                 </tr>
                 <tr class="answer-row">
                     <td><input type="number" class="answer-input" id="ans-o-${i}" maxlength="1"></td>
                     <td><input type="number" class="answer-input" id="ans-t-${i}" maxlength="1"></td>
                     <td><input type="number" class="answer-input" id="ans-h-${i}" maxlength="1"></td>
-                    <td class="sign-col"></td><td class="problem-number-cell"></td>
+                    <td class="sign-col"></td>
+                    <td class="problem-number-cell"></td>
                 </tr>`;
             wrapper.appendChild(table);
             const allInputs = ['ans-o', 'ans-t', 'ans-h', 'carry-t', 'carry-h'].map(id => `${id}-${i}`);
@@ -191,7 +183,10 @@
                 const el = document.getElementById(id);
                 if (el) {
                     el.addEventListener('focus', () => {
-                        if(currentProblemInView !== i) { scrollCenter(table); currentProblemInView = i; }
+                        if(currentProblemInView !== i) {
+                            scrollCenter(table);
+                            currentProblemInView = i;
+                        }
                         el.select(); 
                     });
                     el.addEventListener('keydown', (e) => handleNav(e, i, id));
@@ -200,31 +195,44 @@
         });
     }
     
-    // ★変更点: Enterキーの移動ロジックをご指定の「意識の流れ」に修正
+    // ★変更点: Enterキーの移動ロジックを最終版に修正
     function handleNav(e, i, id) {
-        let nextId = null;
+        const [type, place] = id.split('-').slice(0, 2);
         const p = problems[i];
-        const enterNavOrder = [ `carry-t-${i}`, `ans-o-${i}`, `carry-h-${i}`, `ans-t-${i}`, `ans-h-${i}` ];
+        let nextId = null;
         if (e.key === 'Enter') {
             e.preventDefault();
-            const order = (incorrectFieldIds.length > 0) ? incorrectFieldIds : enterNavOrder;
-            const currentIndex = order.indexOf(id);
-            let nextIndex = currentIndex + 1;
-            while(nextIndex < order.length) {
-                const nextElId = order[nextIndex];
-                const nextEl = document.getElementById(nextElId);
-                if (nextEl && nextEl.style.visibility !== 'hidden') {
-                   nextId = nextElId;
-                   break;
+            const order = (incorrectFieldIds.length > 0) ? incorrectFieldIds : null;
+            if(order) {
+                const currentIndex = order.indexOf(id);
+                if (currentIndex > -1 && currentIndex < order.length - 1) nextId = order[currentIndex + 1];
+            } else {
+                if (type === 'ans' && place === 'o') {
+                    if (p.carry.t === 1 && !p.navState.carryTEntered) {
+                        nextId = `carry-t-${i}`;
+                    } else {
+                        nextId = `ans-t-${i}`;
+                    }
+                } else if (type === 'carry' && place === 't') {
+                    p.navState.carryTEntered = true;
+                    nextId = `ans-o-${i}`;
+                } else if (type === 'ans' && place === 't') {
+                    if (p.carry.h === 1 && !p.navState.carryHEntered) {
+                        nextId = `carry-h-${i}`;
+                    } else {
+                        nextId = `ans-h-${i}`;
+                    }
+                } else if (type === 'carry' && place === 'h') {
+                    p.navState.carryHEntered = true;
+                    nextId = `ans-h-${i}`;
+                } else if (type === 'ans' && place === 'h') {
+                    if (i < NUM_QUESTIONS - 1) {
+                        const nextP = problems[i + 1];
+                        nextId = nextP.carry.t === 1 ? `carry-t-${i + 1}` : `ans-o-${i + 1}`;
+                    }
                 }
-                nextIndex++;
             }
-            if (!nextId && incorrectFieldIds.length === 0 && i < NUM_QUESTIONS - 1) {
-                const nextP = problems[i + 1];
-                nextId = nextP.carry.t === 1 ? `carry-t-${i + 1}` : `ans-o-${i + 1}`;
-            }
-        } 
-        else {
+        } else {
             const navMap = {
                 [`ans-o-${i}`]: { ArrowUp: `carry-t-${i}`, ArrowRight: `ans-t-${i}`},
                 [`ans-t-${i}`]: { ArrowUp: `carry-h-${i}`, ArrowRight: `ans-h-${i}`, ArrowLeft: `ans-o-${i}`},
@@ -234,20 +242,23 @@
             };
             if (navMap[id] && navMap[id][e.key]) { e.preventDefault(); nextId = navMap[id][e.key]; }
         }
-        if (nextId && document.getElementById(nextId)) {
+        if (nextId && document.getElementById(nextId) && document.getElementById(nextId).style.visibility !== 'hidden') {
             document.getElementById(nextId).focus();
         } else if (e.key === 'Enter') {
             checkBtn.focus();
         }
     }
-    
-    // ★変更点: まるつけ後のフォーカス順を「意識の流れ」に修正
+    // ★変更点: まるつけ後のフォーカス順を問題番号も考慮して修正
     function checkAnswers() {
         incorrectFieldIds = []; let allCorrect = true;
         currentProblemInView = -1;
-        const checkOrder = [ `carry-t`, `ans-o`, `carry-h`, `ans-t`, `ans-h` ];
         problems.forEach((p, i) => {
-            const fields = checkOrder.map(f => ({ id: `${f}-${i}`, correct: f.startsWith('ans-') ? p.answer[f.slice(-1)] : p.carry[f.slice(-1)] }));
+            p.navState = {};
+            const fields = [
+                { id: `carry-t-${i}`, correct: p.carry.t }, { id: `ans-o-${i}`, correct: p.answer.o },
+                { id: `carry-h-${i}`, correct: p.carry.h }, { id: `ans-t-${i}`, correct: p.answer.t }, 
+                { id: `ans-h-${i}`, correct: p.answer.h }
+            ];
             fields.forEach(field => {
                 const el = document.getElementById(field.id);
                 if (!el || el.style.visibility === 'hidden') return;
@@ -276,12 +287,12 @@
         } else {
             resultDiv.innerHTML = '❌ まちがいがあります。<br>赤いところを直そう！';
             resultDiv.style.color = 'red';
-            const orderMap = { 'carry-t': 0, 'ans-o': 1, 'carry-h': 2, 'ans-t': 3, 'ans-h': 4 };
+            const orderMap = { 'carry-t': 0, 'ans-o': 1, 'ans-t': 2, 'carry-h': 3, 'ans-h': 4 };
             incorrectFieldIds.sort((a, b) => {
                 const indexA = parseInt(a.split('-').pop()); const indexB = parseInt(b.split('-').pop());
                 if(indexA !== indexB) return indexA - indexB;
                 const typeA = a.split('-').slice(0, 2).join('-'); const typeB = b.split('-').slice(0, 2).join('-');
-                return orderMap[typeA.replace(/-\d+$/, '')] - orderMap[typeB.replace(/-\d+$/, '')];
+                return orderMap[typeA] - orderMap[typeB];
             });
             if (incorrectFieldIds.length > 0) document.getElementById(incorrectFieldIds[0]).focus();
         }
