--- a/3nen/3_tasizan_hikizan_hissan/06_kurisagari_nasi.html
+++ b/3nen/3_tasizan_hikizan_hissan/06_kurisagari_nasi.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>ひき算の筆算ドリル（くりさがり1回）</title>
+  <title>ひき算の筆算（くり下がりなし）</title>
   <style>
     :root { --cell-size: 70px; }
     html { scroll-behavior: smooth; }
@@ -38,7 +38,7 @@
 </head>
 <body>
   <h1>３　たし算とひき算の筆算</h1>
-  <h2>ひき算の筆算（くりさがり1回）</h2>
+  <h2>ひき算の筆算（くり下がりなし）</h2>
 
   <div id="start-area" style="text-align:center; margin:40px 0;"><button id="start-btn">スタート！</button></div>
   <div id="problems-section" style="display:none;">
