--- a/3nen/7_tasizan_hikizan/2_2keta_tasu_2keta_100izyou.html
+++ b/3nen/7_tasizan_hikizan/2_2keta_tasu_2keta_100izyou.html
@@ -231,13 +231,13 @@
 
   <script>
     // --- 基本設定 ---
-    const APP_NS = "tashizan-2keta-over100_"; // ★アプリ固有IDを新しいものに変更
-    const KEY_HS             = APP_NS + "highScore";
-    const KEY_CLEAR          = APP_NS + "clearCount";
-    const KEY_MONTHLY_PREFIX = APP_NS + "monthlyClear-";
-    const KEY_DAILY_PREFIX   = APP_NS + "dailyClear-";
-    const KEY_HISTORY        = APP_NS + "history";
-    const KEY_OVERALL_STATUS = APP_NS + "overallStatus";
+    const APP_ID = '2_2keta_tasu_2keta_100izyou';
+    const KEY_HS             = APP_ID + ':hs';
+    const KEY_CLEAR          = APP_ID + ':clear';
+    const KEY_MONTHLY_PREFIX = APP_ID + ':monthlyClear-';
+    const KEY_DAILY_PREFIX   = APP_ID + ':dailyClear-';
+    const KEY_HISTORY        = APP_ID + ':history';
+    const KEY_OVERALL_STATUS = APP_ID + ':status';
 
     const NUM_QUESTIONS = 10;
     const TIME_LIMIT    = 70; // 少し難易度が上がるため、制限時間を延長
