--- a/3nen/8_nagasa/1_nagasa_tani_henkan.html
+++ b/3nen/8_nagasa/1_nagasa_tani_henkan.html
@@ -172,13 +172,13 @@
   </div>
 
   <script>
-    const APP_NS = "nagasa-tani-v2_";
-    const KEY_HS = APP_NS + "highScore";
-    const KEY_CLEAR = APP_NS + "clearCount";
-    const KEY_MONTHLY_PREFIX = APP_NS + "monthlyClear-";
-    const KEY_DAILY_PREFIX = APP_NS + "dailyClear-";
-    const KEY_HISTORY = APP_NS + "history";
-    const KEY_OVERALL_STATUS = APP_NS + "overallStatus";
+    const APP_ID = '1_nagasa_tani_henkan';
+    const KEY_HS             = APP_ID + ':hs';
+    const KEY_CLEAR          = APP_ID + ':clear';
+    const KEY_MONTHLY_PREFIX = APP_ID + ':monthlyClear-';
+    const KEY_DAILY_PREFIX   = APP_ID + ':dailyClear-';
+    const KEY_HISTORY        = APP_ID + ':history';
+    const KEY_OVERALL_STATUS = APP_ID + ':status';
 
     const NUM_QUESTIONS = 10;
     const TIME_LIMIT = 90;
