--- a/3nen/3_tasizan_hikizan_hissan/08_kurisagari_nikai.html
+++ b/3nen/3_tasizan_hikizan_hissan/08_kurisagari_nikai.html
@@ -78,6 +78,7 @@
   <script>
     const APP_ID = '08_kurisagari_nikai';
     const KEY_HS             = APP_ID + ':hs';
+    const NUM_QUESTIONS = 10; // ← この行を追加
     const KEY_CLEAR          = APP_ID + ':clear';
     const KEY_MONTHLY_PREFIX = APP_ID + ':monthlyClear-';
     const KEY_DAILY_PREFIX   = APP_ID + ':dailyClear-';
