--- a/1nen/07_hikizan1/10_hikizan_10made.html
+++ b/1nen/07_hikizan1/10_hikizan_10made.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <title>１０　かけ算⑴</title>
+  <title>７　ひきざん(1)</title>
   
-  <link rel="stylesheet" href="../common.css"> <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+  <link rel="stylesheet" href="./common.css">
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
 </head>
 <body>
@@ -35,12 +36,13 @@
     <div id="history-area">りれき（１０件）<br><ul id="history-list"></ul></div>
   </div>
 
-
-  <script src="../themes.js"></script>
+  <script src="./themes.js"></script>
   
-  <script src="../common.js"></script>
+  <!-- ★アップグレード版のcommon.jsを読み込みます★ -->
+  <script src="./common.js"></script>
   
-  <script src="../configs/kuku_5dan_junban.js"></script>
+  <!-- ★ひき算用の設定ファイルを読み込みます★ -->
+  <script src="./configs/hikizan_10made.js"></script>
   
 </body>
 </html>
