--- a/2nen/10_kakezan1/20kuku_5dan_barabara.html
+++ b/2nen/10_kakezan1/20kuku_5dan_barabara.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <title>かけ算⑴</title>
+  <title>五の段の九九（ばらばら）</title>
   
   <!-- 外部ファイルを読み込み -->
   <link rel="stylesheet" href="common.css">
