--- a/2nen/10_kakezan1/10kuku_5dan_junban.html
+++ b/2nen/10_kakezan1/10kuku_5dan_junban.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <title>１０　かけ算⑴</title>
+  <title>五の段の九九（じゅんばん）</title>
   
   <link rel="stylesheet" href="common.css"> <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
