--- a/1nen/09_10yori_ookii/10_to_ikutu_1.html
+++ b/1nen/09_10yori_ookii/10_to_ikutu_1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <title>９　10より おおきい かず</title>
+  <title>１０たす いくつ</title>
   
   <link rel="stylesheet" href="./common.css">
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
