--- a/1nen/09_10yori_ookii/10_to_ikutu_1.html
+++ b/1nen/09_10yori_ookii/10_to_ikutu_1.html
@@ -6,7 +6,7 @@
   
   <title>１０たす いくつ</title>
   
-  <link rel="stylesheet" href="./common.css">
+  <link rel="stylesheet" href="../../common/common.css">
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
 </head>
@@ -39,7 +39,7 @@
   <script src="./themes.js"></script>
   
   <!-- ★推奨版のcommon.jsを読み込みます★ -->
-  <script src="./common.js"></script>
+  <script src="../../common/common.js"></script>
   
   <!-- ★このドリル専用の設定ファイルを読み込みます★ -->
   <script src="./configs/tashizan_10plus.js"></script>
