--- a/1nen/07_hikizan1/10_hikizan_10made.html
+++ b/1nen/07_hikizan1/10_hikizan_10made.html
@@ -6,7 +6,7 @@
   
   <title>１０までのひきざん</title>
   
-  <link rel="stylesheet" href="./common.css">
+  <link rel="stylesheet" href="../../common/common.css">
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
 </head>
@@ -39,7 +39,7 @@
   <script src="./themes.js"></script>
   
   <!-- ★アップグレード版のcommon.jsを読み込みます★ -->
-  <script src="./common.js"></script>
+  <script src="../../common/common.js"></script>
   
   <!-- ★ひき算用の設定ファイルを読み込みます★ -->
   <script src="./configs/hikizan_10made.js"></script>
