--- a/1nen/09_10yori_ookii/30_hikizan_to_10.html
+++ b/1nen/09_10yori_ookii/30_hikizan_to_10.html
@@ -6,7 +6,7 @@
   
   <title>こたえが１０になる ひきざん</title>
   
-  <link rel="stylesheet" href="./common.css">
+  <link rel="stylesheet" href="../../common/common.css">
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
 </head>
@@ -37,7 +37,7 @@
   </div>
 
   <script src="./themes.js"></script>
-  <script src="./common.js"></script>
+  <script src="../../common/common.js"></script>
   
   <!-- ★このドリル専用の設定ファイルを読み込みます★ -->
   <script src="./configs/hikizan_to_10.js"></script>
